0.13.2.AA (PreRelease):
- Syncs with Upstream v0.13.2
  * Misc Improvements (Skips items already implemented in RefindPlus)
  * Does not adopt upstream changes to non-volatile variable storage
  * Identifies JFS volumes if a third-party JFS driver is installed
  * Improves separation of filesystem name vs. partition name internally
  * Applies extensive memory management improvements
- Drops Switch to Graphics Mode on EFI Boot (When not Booting OpenCore)
  * Maintains default mode instead of switching to graphics mode when booting EFI loaders
- Improves APFS Remapping
  * Previously failed when using the 'ReScanAll' feature or when not running on Apple Firmware
  * Improves volume filtering
- Fixes Ignoring the Upstream 'max' Resolution Setting
  * The setting was previously not ignored as was intended
- Improves Device Handle Connection
  * Now always runs the connection process a minimum of two (2) times
  * This is because several links are only revealed after a first pass
  * Trades a typically imperceptible increase in boot time for improved stability and reliability
  * NB: The first pass is silent and is not logged
- Adds 'reinstall_gop' as Configuration Option
  * This allows switching the 'Reinstall GOP from RAM' Feature, introduced in v0.12.0.AM,
    "ON" or "OFF" in the configuration file. Default is "OFF"
- Treats OpenCore as other EFI Loaders
  * No longer specifically switches booting the OpenCore EFI to graphics mode
- Now Specfically Logs Booting Clover Instances
  * Now separately identifies Clover instances in the debug log when these are booted
- Changes Misc Token Names for Internal Consistency
  * 'disable_mac_compat_check' to 'disable_compat_check'
  * 'set_mac_boot_args' to 'set_boot_args'
  * 'protect_mac_nvram' to 'protect_nvram'
- Implements Upstream 'firmware_bootnum' manual stanzas (Skipped in v0.13.1.AA)
  * Misc fixes appear to have resolved previously experienced issues